Fixed css styling for the otoscopy and tympanometry components. Also fixed an issue where collapsing the left side of the audiologist screen caused all components to show.

--- a/src/app/audiologist-navigation/audiologist-navigation.component.css
+++ b/src/app/audiologist-navigation/audiologist-navigation.component.css
@@ -52,11 +52,24 @@
   transition: all ease-in-out .2s;
 }
 
-.audio .right-container .main-right-container {
+
+/*
+ * This class is for filling the right side of the screen
+ * with the desired content.
+ * The comma allows this to work for regular or full versions.
+ */
+.audio .right-container .main-right-container,
+.audio .right-container-full .main-right-container {
   height: 90%;
 }
 
-.audio .right-container .main-right-container-hidden {
+/*
+ * This class is for hiding the undesired content on the
+ * right side of the screen.
+ * The comma allows this to work for regular or full versions.
+ */
+.audio .right-container .main-right-container-hidden,
+.audio .right-container-full .main-right-container-hidden {
   display: none
 }
 
